Hot fix: marker spacing on list items

--- a/src/styles/LandingPage.scss
+++ b/src/styles/LandingPage.scss
@@ -58,6 +58,9 @@
           font-size: 0.8rem;
         }
 
+        ul li p {
+          display: inline;
+        }
         ol {
           margin-left: 0;
           list-style-type: none;
